# abridge

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEMO_FRIDAY.md  DEMO_RUNBOOK.md  DEMO_SATURDAY.md  INVERSION.md  LICENSE  Makefile  RATIFICATION.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  pages.yml
configs/: knowledge.json
docs/: CLINICAL_REVIEW.md  CLINICAL_REVIEW_PACKET.md  COMPLIANCE.md  EVALUATION.md  JOURNEY.md  SYSTEM_CARD.md
docs/adr/: 0001-framework-adjudication.md
docs/reviews/: 2026-07-09-review.md  2026-07-10-addendum.md  2026-07-11-addendum.md
drafts/coverage/: README.md  adversarial_fixtures.json  case_peds_speech_denial.json  goldset_candidates.jsonl  pack_peds_dme_adaptive_equipment.json  pack_peds_speech_therapy.json
evaluation/: COUNTS.json  REPORT.md  fhir_export_demo.json  goldset.jsonl
evaluation/adjudication/: PACKET.md  rulings_template.jsonl
evaluation/exhibit/: trace.jsonl
evaluation/heldout/: AUTHORING_TEMPLATE.md  PROTOCOL.md
evaluation/live_runs/: 2026-07-09-fable5-two-surface.json  2026-07-11-fable5-two-surface.json  2026-07-11-opus48-two-surface.json  2026-07-12-opus48-three-surface.json  README.md
examples/: ankle_sprain_ok.json  chest_pain_undertriage.json  hallucination_llm.json  sepsis_incomplete_audio.json
fixtures/: adversarial_transcript.json  chest_pain_timeline.json  demo_chest_pain.json
plugins/attending/: .mcp.json
plugins/attending/.claude-plugin/: plugin.json
plugins/attending/skills/clinical-safety-supervisor/: SKILL.md
scripts/: adjudication_packet.py  clinical_review_packet.py  evidence_counts.py  fhir_demo_export.py  loop_exhibit.py  mutation_check.py  playground_presets_dump.js  playground_recorded.py  promote_ratified.py  web_smoke.js
src/attending/: __init__.py  agent.py  cli.py  comms.py  confidence.py  coverage.py  demo.py  encounter.py  esi.py  evaluate.py  evaluate_coverage.py  fhir.py  gateway.py  graph.py  knowledge.py  llm.py  loop.py  mcp_charts.py  mcp_server.py  pathway.py  supervisor.py  verdict.py
src/attending/detectors/: __init__.py  anchoring_bias.py  hallucination.py  incomplete_audio.py  transcription_error.py
src/attending/proposers/: __init__.py  healthcraft.py
src/sitrep/: gates.py  persistence.py  replay.py  state.py
tests/: conftest.py  test_adjudication.py  test_adversarial.py  test_agent.py  test_comms.py  test_coverage.py  test_demo.py  test_detectors.py  test_docs.py  test_drafts_schema.py  test_esi_boundaries.py  test_fhir.py  test_gates.py  test_gateway.py  test_goldset.py  test_graph.py  test_invariants.py  test_knowledge.py  test_llm_detectors.py  test_loop.py  test_mcp.py  test_pathway.py  test_persistence.py  test_plugin.py  test_proposer_healthcraft.py  test_replay.py  test_scenario_loader.py  test_state.py  test_supervisor.py  test_web.py
web/: README.md  demo_transcript.json  index.html  playground.html  playground_recorded.json
