[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attending"
version = "0.2.1"
description = "A fail-closed supervising layer for clinical triage agents. Built on HealthCraft."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Brandon Dent" }]
dependencies = []

[project.optional-dependencies]
# Anthropic runtime augmentation for the LLM detector hooks (ATTENDING_MODEL).
llm = ["anthropic>=0.116"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
gateway = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
attending = "attending.cli:main"
attending-demo = "attending.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/attending", "src/sitrep"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Gate tests embed long, verbatim patient-facing rendering strings (AI
# disclosure + human path + result text); wrapping them hurts readability.
"tests/test_gates.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
warn_unused_ignores = true
disallow_untyped_defs = false

# HealthCraft is an optional source-checkout dependency (lazy sys.path import).
[[tool.mypy.overrides]]
module = ["healthcraft", "healthcraft.*"]
ignore_missing_imports = true

# Safety-critical modules get strict typing.
[[tool.mypy.overrides]]
module = [
    "attending.supervisor",
    "attending.esi",
    "attending.confidence",
    "attending.loop",
]
disallow_untyped_defs = true

[tool.mutmut]
# Fine-grained mutation round (EVALUATION.md roadmap): operator-level mutants
# inside the gate modules, killed by their fast dedicated suites. The
# mechanism-level harness (make mutation) stays the headline; this catches
# within-mechanism boundary bugs whole-disables cannot.
source_paths = ["src"]
also_copy = ["evaluation/", "configs/", "fixtures/", "drafts/"]
only_mutate = ["src/attending/esi.py"]
pytest_add_cli_args_test_selection = [
    "tests/test_goldset.py", "tests/test_invariants.py",
    "tests/test_knowledge.py", "tests/test_adversarial.py",
    "tests/test_esi_boundaries.py",
]
